Minor style changes and JS fixes
Added horizontal scrolling on mobile, fixed validation and enter issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ h4 {
 
 p {
     color: #797979;
+    line-height: 1.5em;
 }
 
 input {
@@ -352,15 +353,33 @@ button:focus {
 
 .categories {
     padding: 30px 0px;
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
 }
 
 .container {
+    flex: 0 0 auto;
     background: #fff;
-    width: 85%;
-    margin: 30px auto;
+    width: 80%;
+    margin: 30px 0px;
     border-radius: 10px;
     padding: 20px 0px 40px;
     position: relative;
+}
+
+.container:first-child {
+    border-left: 30px solid #F5F5F5;
+    border-right: 30px solid #F5F5F5;
+}
+
+.container:last-child {
+    border-right: 30px solid #F5F5F5;
+    border-left: 30px solid #F5F5F5;
+}
+
+.container:nth-child(2) {
+    border-right: 30px solid #F5F5F5;
 }
 
 .container > h2 {
@@ -499,7 +518,7 @@ footer {
 footer p {
     color: #fff;
     text-align: center;
-    padding-top: 27px;
+    padding-top: 25px;
 }
 
 /* grayed out buttons after budget limit is reached */
@@ -557,12 +576,12 @@ footer p {
     .top-container {
         display: flex;
         max-width: 1200px;
-        margin: 140px auto 80px;
+        margin: 140px auto 50px;
     }
 
     .about {
         flex: 1;
-        padding: 0em 2em;
+        padding: 0em 3em;
     }
 
     .about > p {
@@ -604,7 +623,7 @@ footer p {
     }
     
     .bar {
-        margin: 0px 20px 25px 0px;
+        margin: 0px 20px 15px 0px;
     }
 
     /* ------- Category Styles --------*/
@@ -623,6 +642,18 @@ footer p {
         flex: 0 auto;
         margin-left: 10px;
         margin-right: 10px;
+    }
+
+    .container:first-child {
+        border: none;
+    }
+    
+    .container:last-child {
+        border: none;
+    }
+    
+    .container:nth-child(2) {
+        border: none;
     }
 
 /* ------- Transaction History Styles --------*/
